# profile-extraction-ml-poc

./: .gitignore  README.md  app.py  batch_jd.py  batch_resume.py  experiment_1.ipynb  experiment_2.ipynb  pyproject.toml
experiments/: experiment_1.ipynb  experiment_2.ipynb
src/: config.py  ocr.py
src/chains/: jd_chain.py  judge_chain.py  resume_chain.py
src/graph/: state.py  workflow.py
src/validation_models/: jd.py  judge.py  resume.py
